--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             },
             created() {
                 // Fetch books from server when the app is created
-                fetch('https://example.com/api/books') // Replace with your server API endpoint
+                fetch(' https://werwerwerwre.github.io/Book-Vers/') // Replace with your server API endpoint
                     .then(response => response.json())
                     .then(data => {
                         this.books = data;
@@ -132,7 +132,7 @@
                         };
 
                         // Send the new book to the server
-                        fetch('https://example.com/api/books', { // Replace with your server API endpoint
+                        fetch('https://werwerwerwre.github.io/Book-Vers/', { // Replace with your server API endpoint
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
@@ -160,3 +160,4 @@
     </script>
 </body>
 </html>
+
